# freen

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme-deutsch.md  readme.md
example/: build.js  init.lua  matrix.lua
lua/: ficsit-api.lua  freen.lua
src/: component.rs  events.rs  files.rs  lib.rs  network.rs
src/screens/: grid.rs  icon.rgba  mod.rs  renderer.rs  screen.rs  text.rs
src/shaders/: shader.wgsl
tests/: tests.lua
