[package]
name = "Freen"
version = "0.3.0"
edition = "2021"
authors = ["TheWhiteShadow"]
description = "Fenster mit Zeichen Matrix zur Anzeige von FIN lua Programmen."


[dependencies]
bytemuck = "1.7.3"
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.9.0"
fps_counter = "2.0.0"
futures = "0.3.19"
rand = "0.8.4"
ultraviolet = "0.8.1"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
winit = "0.26.0"

# Release Profile. Optimiert für Datei Größe.
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[lib]
name = "freen"
crate-type = ["cdylib"]
